H3CIPMSJAVA-20180830/src/objects/DeliveryParts__c.object
<CustomObject>
    <fields>
        <fullName>DeliveryPartPN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeliveryPartPN</label>
        <referenceTo>DeliveryPartPN__c</referenceTo>
        <relationshipLabel>DeliveryParts</relationshipLabel>
        <relationshipName>DeliveryParts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isDOA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInstallPart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>上门工程师是否安装该备件</description>
        <label>isInstallPart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partTypeF__c</fullName>
        <formula>DeliveryPartPN__r.PNType__c</formula>
        <label>partTypeF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>workorder__c</fullName>
        <label>workorder</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>DeliveryParts</relationshipLabel>
        <relationshipName>DeliveryPartsWorkorder</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DeliveryParts</label>
    <nameField>
        <label>DeliveryPartSN</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>